--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,6 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+  --text-color:#ffffffe3;
+  --foreground-rgb: #000000;
+  --background-start-rgb:  #d6dbdc;
+  --background-end-rgb: #ffffff; 
+
+  /* UI */
+  --link-hover-background: rgba(255, 255, 255, 0.5) !important;
+  --navlink-color: #545353d3 !important;
+  --navlink-active: #3f1de7, 
+}
+
+[data-theme='dark'] {
+  --foreground-rgb: #ffffff; 
+  --background-start-rgb: #000000;
+  --background-end-rgb: #000000;
+
+  /* UI hover */
+  --link-hover-background: rgba(0, 0, 0, 0.5) !important;
+  --navlink-color: #ece1e1d3 !important;
+  --navlink-active: #C0E218, 
+
+}
 
 .task-list-item::before {
   @apply hidden;
